# FrankenJet

./: .gitignore  .gitlab-ci.example.yml  .gitlab-ci.yml  README.md  docker-compose-bot.yml  docker-compose-ci.yml  docker-compose-full.yml  docker-compose-p.yml  docker-compose.back.yml  docker-compose.front.yml  docker-compose.yml
backend/: .coveragerc  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env-example.env  example.env  main.py  mypy.ini  pyproject.toml  pytest.ini
backend/alembic/: dev.ini  local.ini  main.ini
backend/alembic/dev/: env.py
backend/alembic/local/: env.py
backend/alembic/main/: env.py
backend/app/: exceptions.py  types.py
backend/app/api/: __init__.py  admin.py  aircraft.py  app.py  articles.py  auth.py  bot.py  bureaus.py  chat_bot.py  countries.py  deps.py  designers.py  facts.py  local.py  manufacturers.py  oauth.py  oauth2.py  openapi_examples.py  pages.py  responses.py  search.py  tags.py  types.py  users.py  websocket.py
backend/app/config/: app.py  chat_bot.py  chatbot.py  env.py
backend/app/consumers/: handlers.py  startup.py
backend/app/core/: __init__.py  api_settings.py  cache_manager.py  config.py  config_const.py  config_env.py  db_manager.py  es_manager.py  gigachat.py  http_manager.py  logs.py  logs_handlers.py  rmq_manager.py  s3_manager.py  security.py  vectorizer.py  ws_manager.py
backend/app/core/grpc_clients/: vectorizer_pb2.py  vectorizer_pb2_grpc.py
backend/app/db/: __init__.py  db_manager.py  deps.py  types.py
backend/app/decorators/: db_errors.py
backend/app/dependencies/: api.py  auth.py  db.py  es.py  http.py  rmq.py  s3.py
backend/app/exceptions/: api.py  articles.py  auth.py  base.py  bot.py  oauth2.py  users.py
backend/app/schemas/: aircraft.py  api.py  articles.py  auth.py  bot.py  bureaus.py  chat_bot.py  chatbot.py  countries.py  design_bureaus.py  designers.py  facts.py  gigachat.py  jti.py  manufacturers.py  refresh_tokens.py  search.py  tags.py  user_info.py  users.py
backend/app/services/: admin.py  aircraft.py  app.py  articles.py  auth.py  bot.py  bureaus.py  chatbot.py  chatbot_settings.py  countries.py  designers.py  facts.py  manufacturers.py  oauth.py  oauth2.py  pages.py  ragbot.py  rmq_handlers.py  search.py  security.py  tags.py  user_info.py  users.py  utils.py  websocket.py
backend/certs/: README.md
backend/scripts/: entrypoint.sh  init_data.py  init_db.py  init_es.py  init_s3.py
backend/scripts/articles/: concorde_1969.json  concorde_1969.md  graf_zeppelin_1928.json  graf_zeppelin_1928.md  il_2_1939.json  il_2_1939.md  wright_flyer_1903.json  wright_flyer_1903.md
backend/scripts/data/: countries.json  facts.txt  roles.json  tags.json  tags.txt  tags_categories.json
backend/tests/: conftest.py
backend/tests/integration_tests/: test_api_articles.py  test_api_auth.py  test_api_pages.py  test_api_search.py  test_api_settings.py  test_api_tags.py  test_services_tags.py
backend/tests/mocks/: aircraft.json  articles.json  countries.json  facts.json
backend/tests/unit_tests/: test_base_repository.py  test_db_manager.py  test_schemas.py
elasticsearch/: Dockerfile  (+1 more)
vectorizer/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  models.py  pyproject.toml  server.py
vectorizer/app/: bot.py  config.py  logs.py  logs_handlers.py  models.py  rmq_manager.py  schemas.py  service.py
vectorizer/proto/: generate_proto.sh  vectorizer.proto  vectorizer_pb2.py  vectorizer_pb2_grpc.py
(+139 files in other folders)
