[project]
name = "backend"
version = "0.1.0"
description = "Franken Jet by Dmitry Odegov"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt==3.2.0",
    "environs>=14.3.0",
    "fastapi[all]>=0.116.1",
    "passlib>=1.7.4",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]

[tool.black]
line-length = 121
skip-string-normalization = true

[tool.ruff]
exclude = [
    "alembic",
]
line-length = 121
unfixable = ["E712"]
