[project]
name = "franken-jet-backend"
version = "0.1.0"
description = "Franken Jet by Dmitry Odegov"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "aiofiles>=24.1.0",
    "aiohttp==3.11.18",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt==3.2.0",
    "elasticsearch[async]>=9.1.1",
    "environs>=14.3.0",
    "fastapi-cache2>=0.2.2",
    "fastapi-limiter>=0.1.6",
    "fastapi[all]>=0.117.1",
    "faststream[rabbit]>=0.5.48",
    "passlib>=1.7.4",
    "pyjwt[crypto]>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]
tests = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
]

[tool.black]
line-length = 120
skip-string-normalization = false

[tool.ruff]
exclude = [
    "alembic",
]
line-length = 120
unfixable = ["E712"]
