[project]
name = "franken-jet-backend"
version = "0.1.0"
description = "Franken Jet by Dmitry Odegov"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "aiofiles>=24.1.0",
    "aiohttp==3.9.2",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.0",
    "elasticsearch[async]==8.19.2",
    "environs>=14.5.0",
    "fastapi-cache2>=0.2.2",
    "fastapi-limiter>=0.1.6",
    "fastapi[all]>=0.128.0",
    "faststream[rabbit]>=0.6.5",
    "grpcio-tools>=1.76.0",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "pyjwt[crypto]>=2.10.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
tests = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
]

[tool.black]
line-length = 120
skip-string-normalization = false

[tool.ruff]
exclude = [
    "alembic",
    "**/grpc_clients/*.py",
]
line-length = 120
lint.unfixable = ["E712"]
