[project]
name = "vectorizer"
version = "0.1.0"
description = "FrankenJet Vectorizer Microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed==0.5.1",
    "faststream[rabbit]>=0.6.5",
    "grpcio-tools>=1.76.0",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.2.0",
]
